--- a/BookStore/BookStore.csproj
+++ b/BookStore/BookStore.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\BookStore.Models\BookStore.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
