--- a/BookStore/appsettings.json
+++ b/BookStore/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DEVELOPMENT-SER;Database=BookStore;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DEVELOPMENT-SER;Database=BookStore;Trusted_Connection=True;",
+    "BookStoreDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
